--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -23,10 +23,12 @@
         <th>ID</th>
         <th>ИМЯ</th>
         <th>ВОЗРАСТ</th>
+        <th>ПАРОЛЬ</th>
     </tr>
     <td th:utext="${user.getId()}"></td>
     <td th:utext="${user.getUsername()}"></td>
     <td th:utext="${user.getAge()}"></td>
+    <td th:utext="${user.getPassword()}"></td>
 
 </table>
 <br>
