--- a/src/main/resources/templates/user_id.html
+++ b/src/main/resources/templates/user_id.html
@@ -27,21 +27,19 @@
         <th colspan="3">ОПЕРАЦИИ</th>
 
     </tr>
-    <td th:utext="${user.getId()}"></td>
-    <td th:utext="${user.getUsername()}"></td>
-    <td th:utext="${user.getAge()}"></td>
-    <td>
-
-
+    <tr th:utext="${user.getId}"></tr>
+    <tr th:utext="${user.getUsername()}"></tr>
+    <tr th:utext="${user.getAge()}"></tr>
+    <tr>
         <form th:method="DELETE" th:action="@{admin/delete/{id}(id=${user.getId()})}">
             <input type="submit" value="Удалить"/>
         </form>
-    </td>
-    <td>
-        <form th:action="@{admin/edit/{id}(id=${user.getId()})}">
+    </tr>
+    <tr>
+        th:action="@{admin/edit/{id}(id=${user.getId()})}">
             <input type="submit" value="Редактировать"/>
         </form>
-    </td>
+    </tr>
 </table>
 </body>
 </html>
